# aws-agent-core-sample-application

./: .env.example  .gitignore  README.md  agent-permissions-policy.json  invoke_agent.py  pyproject.toml
aws-agent-core-sample-application/: agent-permissions-policy.json  invoke_agent.py  readme.md
aws-agent-core-sample-application/docs/: LOCAL_TESTING_GUIDE.md  QUICK_GUIDE.md
aws-agent-core-sample-application/src/: agentcore_entrypoint.py  main.py
aws-agent-core-sample-application/src/bedrock/: client.py
aws-agent-core-sample-application/src/utils/: __init__.py
docs/: DEPLOYMENT_GUIDE.md  TESTING_GUIDE.md  agentcore_architecture.drawio  architecture.drawio  architecture_1.drawio
src/: __init__.py  agentcore_entrypoint.py  main.py  requirements.txt  test_agent_local.py
src/agent/: __init__.py  aws_agent.py
src/agentcore_gateway/: 01_setup_gateway.py  02_create_targets.py  __init__.py  gateway_config.json.example  policy_config.json.example  trust-policy.json  utils.py
src/bedrock/: __init__.py  langchain_integration.py
src/config/: settings.py
src/gateway_integration/: __init__.py  langchain_tools.py  mcp_client.py  test_integration.py
src/mcp_tools/: __init__.py  base_tool.py  dynamodb_tools.py  lambda_tools.py  metrics_tools.py  s3_tools.py
src/memory/: __init__.py  client.py  session.py  setup_memory.py
src/policy/: __init__.py  client.py  setup_policy.py  templates.py
src/utils/: helpers.py
